Connection pane UI, using config file, bug fixes and code cleaning.